--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "seed": "node ./src/utils/seeds/books.seed.js",
+    "seed2": "node ./src/utils/seeds/bookShops.seed.js"
   },
   "keywords": [],
   "author": "",
